improvements for alpha5